fix license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "size chart",
         "sizechart"
     ],
-    "license": "EUPL",
+    "license": "EUPL-1.2",
     "authors": [
         {
             "name": "Piotr Lewandowski",
