--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,14 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "sylius/sylius": "~1.10.0 || ~1.9.0"
+        "php": "^8.0",
+        "sylius/sylius": "^1.12",
+        "sylius/mailer-bundle":  "^1.8 || ^2.0@beta",
+        "symfony/webpack-encore-bundle": "^1.15"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
         "behat/mink-selenium2-driver": "^1.4",
-        "bex/behat-screenshot": "^2.1",
         "dmore/behat-chrome-extension": "^1.3",
         "dmore/chrome-mink-driver": "^2.7",
         "friends-of-behat/mink": "^1.8",
@@ -42,31 +43,33 @@
         "friends-of-behat/suite-settings-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^2.1",
         "friends-of-behat/variadic-extension": "^1.3",
-        "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
-        "phpspec/phpspec": "^7.0",
-        "phpspec/prophecy-phpunit": "^2.0",
+        "phpspec/phpspec": "^7.2",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "0.12.85",
-        "phpstan/phpstan-doctrine": "0.12.33",
-        "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "0.12.12",
+        "phpstan/phpstan": "^1.8.1",
+        "phpstan/phpstan-doctrine": "1.3.16",
+        "phpstan/phpstan-strict-rules": "^1.3.0",
+        "phpstan/phpstan-webmozart-assert": "^1.2.0",
         "phpunit/phpunit": "^9.5",
-        "sensiolabs/security-checker": "^6.0",
-        "sylius-labs/coding-standard": "^4.0",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "vimeo/psalm": "4.7.1"
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "sylius-labs/coding-standard": "^4.2",
+        "symfony/browser-kit": "^5.4 || ^6.0",
+        "symfony/debug-bundle": "^5.4 || ^6.0",
+        "symfony/dotenv": "^5.4 || ^6.0",
+        "symfony/flex": "^2.2.2",
+        "symfony/intl": "^5.4 || ^6.0",
+        "symfony/web-profiler-bundle": "^5.4 || ^6.0",
+        "vimeo/psalm": "4.27.0"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": false,
+            "phpstan/extension-installer": true,
+            "symfony/flex": true,
+            "symfony/thanks": true
+        }
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "1.10-dev"
-        }
     },
     "autoload": {
         "psr-4": {
@@ -88,6 +91,11 @@
         ],
         "post-create-project-cmd": [
             "php bin/create_node_symlink.php"
-        ]
+        ],
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
+        }
     }
 }
