--- a/phpspec.yml.dist
+++ b/phpspec.yml.dist
@@ -1,4 +1,4 @@
 suites:
     main:
-        namespace: Madcoders\SyliusSizechartPlugin
-        psr4_prefix: Madcoders\SyliusSizechartPlugin
+        namespace: Acme\SyliusExamplePlugin
+        psr4_prefix: Acme\SyliusExamplePlugin
